# Chip-analysis-and-prediction

./: README.md  data_analysis_and_prediction.ipynb  pyproject.toml  test.ipynb  test2.ipynb  test3.ipynb
src/chip_analysis/: __main__.py  data_summary.py  exploratory_data_analysis.py  inferences.py
src/chip_analysis_and_prediction/: __main__.py  data_summary.py  exploratory_data_analysis.py  inferences.py
